# idefix

./: .gitignore  CMakeLists.txt  CMakeLists.txt-backup  README.md  idefix.sublime-project
deprecated/: AwesomeStrategy.cpp  AwesomeStrategy.h  Candle.h  Chart.h  Indicator.h  Operators.h  QPlot.cpp  RangeStrategy.cpp  RangeStrategy.h  Renko.h  RenkoBrick.h  RenkoChart.h  RenkoStrategy.h  RiskManagement.h  old_main.cpp
deprecated/strategies/: RenkoStrategy.cpp  RenkoStrategy.h
docs/: RangeChartStrategy.md  brokeradapter.md  flows.md  formula.md  index.md  lotcalcs.md  renko.md
examples/: fix_application.cpp  fix_application.h
examples/fix_example/Debug/: CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog
examples/fix_example/quickfix/doc/html/: _acceptor_8cpp.html  _acceptor_8cpp_source.html  _acceptor_8h.html  _acceptor_8h_source.html  _allocator_8h.html  _allocator_8h_source.html  _application_8h_source.html  _call_stack_8cpp_source.html  _call_stack_8h.html  _call_stack_8h_source.html  _d_o_m_document_8h.html  _data_dictionary_8cpp.html  _data_dictionary_8h.html  _data_dictionary_provider_8cpp.html  _database_connection_i_d_8h.html  _database_connection_pool_8h.html  _database_connection_pool_8h_source.html  _dictionary_8cpp_source.html  _dictionary_8h.html  _event_8h_source.html  _exceptions_8h_source.html  _field_8h.html  _field_8h_source.html  _field_convertors_8h_source.html  _field_numbers_8h_source.html  _field_types_8cpp.html  _field_types_8cpp_source.html  _field_types_8h.html  _file_log_8cpp.html  _file_store_8cpp.html  _file_store_8cpp_source.html  _file_store_8h.html  _file_store_8h_source.html  _group_8h_source.html  _http_connection_8cpp_source.html  _http_connection_8h.html  _http_message_8h.html  _http_message_8h_source.html  _http_parser_8cpp_source.html  _http_parser_8h.html  (+297 more)
help/fix_example/: FIXFXCM10.xml  fix_application.h  fix_example.vcxproj  fix_example.vcxproj.filters  settings.cfg
help/fix_example/Debug/: CL.read.1.tlog  fix_example.lastbuildstate  mt.read.1.tlog  vc100.idb
help/fix_example/quickfix/doc/html/: _application_8h.html  _call_stack_8cpp.html  _d_o_m_document_8h_source.html  _data_dictionary_8cpp_source.html  _data_dictionary_8h_source.html  _data_dictionary_provider_8cpp_source.html  _data_dictionary_provider_8h.html  _data_dictionary_provider_8h_source.html  _database_connection_i_d_8h_source.html  _dictionary_8cpp.html  _dictionary_8h_source.html  _event_8h.html  _exceptions_8h.html  _field_convertors_8h.html  _field_map_8cpp.html  _field_map_8cpp_source.html  _field_map_8h.html  _field_map_8h_source.html  _field_numbers_8h.html  _field_types_8h_source.html  _fields_8h.html  _fields_8h_source.html  _file_log_8cpp_source.html  _file_log_8h.html  _file_log_8h_source.html  _group_8cpp.html  _group_8cpp_source.html  _group_8h.html  (+285 more)
mathtest_src/: CMakeLists.txt  main.cpp
pipnl_src/: CMakeLists.txt
playground_src/: CMakeLists.txt  main.cpp
scripts/: convert.sh  debug.sh  rebuild.sh  release.sh  tickdatadl.sh
specs/: FIXFXCM10.xml  awesome.cfg  default.conf  fxcm.conf  idefix.conf  local.cfg  settings.cfg  sim.conf  simclient.conf  tick70.conf
src/: AbstractMovingAverage.h  AbstractStrategy.h  Account.cpp  Account.h  AwesomeStrategy.cpp  AwesomeStrategy.h  Bar.h  CFGParser.h  CMakeLists.txt  CMakeLists.txt-backup  CSVHandler.cpp  CSVHandler.h  Candle.cpp  Candle.h  Chart.cpp  Chart.h  Console.h  Exceptions.h  FIXApp.cpp  FIXApp.h  FIXFactory.h  FIXManager.cpp  FIXManager.h  FXCMFields.h  LogaStrategy.cpp  LogaStrategy.h  Market.h  MarketDetail.h  MarketOrder.h  MarketSnapshot.h  Math.h  Operators.h  Pairs.h  QPlot.cpp  QPlot.h  RangeStrategy.cpp  RangeStrategy.h  RenkoChart.cpp  RenkoChart.h  RenkoIndicator.cpp  (+24 more)
src/adapter/: CMakeLists.txt  brokeradapter.h  fileadapter.cpp  fileadapter.h
src/adapter/fxcm/: CMakeLists.txt  fxcm.cpp  fxcm.h  fxcmfields.h
src/algos/: CMakeLists.txt  tick70.cpp  tick70.h
src/assets/: eurusd.h
src/core/: account.cpp  account.h  adapter.cpp  adapter.h  algo.cpp  algo.h  configfile.h  datacontext.cpp  datacontext.h  enums.h  exchangetypes.h  execution.cpp  execution.h  instrument.cpp  instrument.h  logger.h  mainapplication.cpp  mainapplication.h  order.cpp  order.h  ordercontext.cpp  ordercontext.h  singleton.h  utility.h  webcontext.cpp  webcontext.h
src/deprecated/: AbstractIndicator.h  Chart.cpp  Renko.cpp  Strategy.h  Tick.h  datacenter.h
src/deprecated/strategies/: AbstractStrategy.h
src/html/: chart.html
src/indicator/: AbstractIndicator.h  Bar.h  IMovingAverage.h  MovingAverage.cpp  MovingAverage.h  Renko.cpp  Renko.h  RenkoBrick.h  RenkoIndicator.cpp  RenkoIndicator.h  SimpleMovingAverage.cpp  SimpleMovingAverage.h
src/sim/: CMakeLists.txt  main.cpp  sim.cpp  sim.h
src/strategies/: AbstractStrategy.h  RenkoStrategy.cpp  RenkoStrategy.h
src/types/: MarketOrder.h  MarketSnapshot.h
src/webinterface/: WebContext.cpp  WebContext.h
src_gui/: CMakeLists.txt  gui.cpp
src_html/: index.html  readme.md
src_html/js/: app.js
src_mathtest/: main.cpp
src_old/: Account.h  CFGParser.cpp  Enums.h  Exceptions.h  MarketOrder.h  MarketSide.h  main.cpp  order.h  times.h
src_pipnl/: main.cpp
src_playground/: main.cpp
src_renko/: CMakeLists.txt  Strategy.h  renko.cpp  renkonvert.cpp  renkotest.cpp
src_renko/deprecated/: renkonvert.cpp  renkotest.cpp
src_renko/html/: anychart.min.js  chart.html
src_signals/: CMakeLists.txt
src_timetest/: main.cpp
src_tradelog/: main.cpp
srcf8/: CMakeLists.txt  datacenter.cpp  datatypes.h  idefix.cpp  idefix.h  main.cpp
srcf8/adapter/: fix_client.cpp  fix_client.h  fix_router.cpp  fix_router.h
srcqf/: CMakeLists.txt  FIXApp.cpp  FIXApp.h  main.cpp
tests/src_gui/: gui.h  main.cpp
tests/src_renko/: RenkoStrategy.h
tests/src_renko/html/: series.js  tradeseries.js
tests/src_signals/: main.cpp
tests/src_timetest/: CMakeLists.txt
tests/src_tradelog/: CMakeLists.txt  main.cpp
timetest_src/: main.cpp
tools/: convert.sh  rebuild.sh
